전체 코드 재정비 (불필요 코드 제거, 컴파일 오류 수정, 회원정보 우편번호api 연동, properties 정리, 인터랙티브 css 추가 등)